@@ -54,6 +54,9 @@ C-API
 Library
 -------
 
+- Issue #8729: Return NotImplemented from collections.Mapping.__eq__ when
+  comparing to a non-mapping.
+
 - Issue #8774: tabnanny uses the encoding cookie (#coding:...) to use the
   correct encoding
 
